# milestone1-zomato

./: .env.example  .gitignore  config.yaml  pyproject.toml  requirements.txt  streamlit_app.py
docs/: catalog-schema.md  improvements.md  phase-wise-architecture.md
scripts/: ingest_zomato.py  peek_processed.py
src/restaurant_rec/: __init__.py  config.py
src/restaurant_rec/phase1/: __init__.py  ingest.py  schema.py  transform.py  validate.py
src/restaurant_rec/phase2/: __init__.py  catalog_bootstrap.py  catalog_loader.py  cities.py  filter.py  localities.py  preferences.py
src/restaurant_rec/phase3/: __init__.py  env_util.py  groq_client.py  models.py  orchestrate.py  parse.py  prompts.py
src/restaurant_rec/phase4/: __init__.py  app.py  schemas.py  streamlit_secrets.py  streamlit_ui.py
tests/: test_api_phase4.py  test_cities.py  test_filter.py  test_phase1_transform.py  test_phase3.py  test_phase3_live_groq.py
web/: app.js  index.html  styles.css
web-next/: .env.local.example  .gitignore  .npmrc  README.md  package-lock.json  package.json  tailwind.config.ts
web-next/app/: globals.css  layout.tsx  page.tsx
web-next/components/: Footer.tsx  Header.tsx  HeroSearch.tsx  RestaurantCard.tsx
web-next/lib/: api.ts
